--- a/client/main.css
+++ b/client/main.css
@@ -24,6 +24,13 @@ body {
   background: white;
 }
 
+.days {
+  border: solid 2px;
+  text-align: center;
+  padding:45px;
+
+}
+
 header {
   background: #d2edf4;
   background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
