Reset button & onClick CSS

--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,13 @@
 /* CSS declarations go here */
+
+.active {
+  border: solid 2px;
+  text-align: center;
+  padding: 45px;
+  background: lightgreen;
+  opacity: .8;
+}
+
 body {
   font-family: sans-serif;
   background-color: #315481;
@@ -27,8 +36,8 @@ body {
 .days {
   border: solid 2px;
   text-align: center;
-  padding:45px;
-
+  padding: 45px;
+  background: #e5efff;
 }
 
 header {
@@ -86,9 +95,11 @@ ul {
 }
 
 li {
+  font-size: 10px;
+
   position: relative;
   list-style: none;
-  padding: 15px;
+  /*padding: 15px;*/
   border-bottom: #eee solid 1px;
 }
 
