--- a/client/main.css
+++ b/client/main.css
@@ -5,15 +5,20 @@
   border: solid 2px;
   text-align: center;
   padding: 2.5em;
-  background: lightgreen;
+  background: rgba(255,255,255,0.1);
   opacity: .8;
 }
 
 body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  /*background-color: #315481;*/
+  /*background-image: linear-gradient(to bottom, #315481, #918e82 100%);*/
+  background-image: url("http://geodavephotography.com/images/blur-wallpaper/38164497-blur-wallpaper.jpg");
   background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
 
   position: absolute;
   top: 0;
@@ -27,20 +32,23 @@ body {
   font-size: 14px;
 }
 
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  min-height: 100%;
-  background: white;
+.test-container {
+  transform: translate(20%);
+  /*max-width: 600px;*/
+  /*margin: 0 auto;*/
+  /*min-height: 100%;*/
+  /*background: white;*/
 }
 
 .days {
+  /*background: #e5efff;*/
+  background: rgba(255,255,255,0.45);
+  border: solid 2px;
+  color: #1b2638;
   float: left;
   font-size: 1em;
-  border: solid 2px;
-  text-align: center;
   padding: 2.5em;
-  background: #e5efff;
+  text-align: center;
 }
 
 .newline {
@@ -90,9 +98,10 @@ ul {
 
 li {
   font-size: 15px;
-
+  display: inline;
   position: relative;
   list-style: none;
+  padding-left: 20px;
   /*padding: 15px;*/
   border-bottom: #eee solid 1px;
 }
