--- a/client/main.css
+++ b/client/main.css
@@ -1,19 +1,24 @@
 /* CSS declarations go here */
 
 .active {
-  float: left;
-  border: solid 2px;
-  text-align: center;
-  padding: 2.5em;
   background: rgba(255,255,255,0.1);
+  border: solid 2px;
+  border-color: #1b2638;
+  color: rgba(1,1,1,0.2);
+  float: left;
   opacity: .8;
+  padding: 2.5em;
+  text-align: center;
 }
 
 body {
-  font-family: sans-serif;
-  /*background-color: #315481;*/
-  /*background-image: linear-gradient(to bottom, #315481, #918e82 100%);*/
-  background-image: url("http://geodavephotography.com/images/blur-wallpaper/38164497-blur-wallpaper.jpg");
+  /*background-image: url("http://geodavephotography.com/images/blur-wallpaper/38164497-blur-wallpaper.jpg");*/
+  /*background-image: url("https://i.imgur.com/JQDQKos.jpg");*/
+  /*background-image: url("https://cdn.wallpapersafari.com/65/39/0NxcDA.jpg");*/
+  /*background-image: linear-gradient(to bottom, #5162ff, #040042 100%);*/
+  /*background-image: url("http://www.ilikewallpaper.net/ipad-air-wallpapers/download/25838/Ocean-Art-Peace-Blue-Gradation-Blur-ipad-air-wallpaper-ilikewallpaper_com.jpg");*/
+  background-image: url("https://i.imgur.com/d0xGaei.jpg");
+
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -32,8 +37,20 @@ body {
   font-size: 14px;
 }
 
-.test-container {
-  transform: translate(20%);
+.button {
+  background-color: rgba(255,255,255,0.65);
+  color: black;
+  display: inline-block;
+  font-family: geneva;
+  padding: 1em 0;
+  margin: 0 20px;
+  width: 10em;
+  text-align: center;
+  
+}
+
+.cal-container {
+  transform: translate(21%);
   /*max-width: 600px;*/
   /*margin: 0 auto;*/
   /*min-height: 100%;*/
